hard-gists/99e1ad329383de04be4834a8c3e28c0d/run.log
=== Docker Run Log for 99e1ad329383de04be4834a8c3e28c0d ===
Started at: Mi 29. Okt 18:38:07 CET 2025

[2025-10-29 18:38:07] START: Running container for 99e1ad329383de04be4834a8c3e28c0d
[2025-10-29 18:38:07] SUCCESS: Container fa5238d453cdc63c142437c924c7a2e478a1334265a21166090bb77a0aa4099d started for 99e1ad329383de04be4834a8c3e28c0d
=== Container logs for 99e1ad329383de04be4834a8c3e28c0d ===
  File "/snippet.py", line 95
    print 'Read a new frame: ', success
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 99e1ad329383de04be4834a8c3e28c0d ===
[2025-10-29 18:38:09] INFO: Container fa5238d453cdc63c142437c924c7a2e478a1334265a21166090bb77a0aa4099d has stopped
